Edit composer information

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Radek Bednář",
-            "email": "radek.bednar@ipsos.com"
+            "email": "radekbednar95@gmail.com"
         }
     ],
     "autoload": {
